provarAnt/00D190000000ZY2EAM/objects/Geographical_Region_and_Make__c.object
<CustomObject>
    <fields>
        <fullName>Full_Rate__c</fullName>
        <label>Full Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Geography_Sub__c</fullName>
        <label>Geography Sub</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Geography__c</fullName>
        <label>Geography</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Make__c</fullName>
        <label>Make</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Code__c</fullName>
        <label>Product Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Geographical Region and Make</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Geographical Region and Make Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Geographical Region and Make</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>